<resources>
    <string name="app_name">parse-instagram</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user">Username</string>
    <string name="take_picture">Take Picture</string>
    <string name="description">Description...</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
</resources>